--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.3.4",
     "eslint-config-prettier": "^10.1.5",
+    "eslint-plugin-check-file": "^3.3.0",
     "husky": "^9.1.7",
     "lint-staged": "^16.1.2",
     "tailwindcss": "^4",
