--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
   "dependencies": {
     "@t3-oss/env-nextjs": "^0.13.8",
     "@tanstack/react-query": "^5.81.4",
+    "clsx": "^2.1.1",
     "next": "15.3.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-error-boundary": "^6.0.0",
+    "sonner": "^2.0.5",
+    "tailwind-merge": "^3.3.1",
     "tailwind-variants": "^1.0.0",
     "usehooks-ts": "^3.1.1",
     "zod": "^3.25.67"
