--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "tailwind-merge": "^3.3.1",
     "tailwind-variants": "^1.0.0",
     "usehooks-ts": "^3.1.1",
-    "zod": "^3.25.67"
+    "zod": "^3.25.67",
+    "zustand": "^5.0.6"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.8.1",
