--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -7,27 +7,43 @@ on:
 
 jobs:
   lint-commit-msg:
-    runs-on: [ubuntu-latest]
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
           node-version: 20
+
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v2
+        with:
+          version: 10
+
       - name: Install deps
-        run: pnpm install
+        run: pnpm install --frozen-lockfile
+
       - name: Lint commit message
         run: npx commitlint --last --verbose
 
   lint-code:
-    runs-on: [ubuntu-latest]
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
           node-version: 20
+
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v2
+        with:
+          version: 9
+
       - name: Install deps
-        run: pnpm install
+        run: pnpm install --frozen-lockfile
+
       - name: Lint code
         run: pnpm run lint
