--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@t3-oss/env-nextjs": "^0.13.10",
     "@tanstack/react-query": "^5.90.20",
+    "axios": "^1.13.4",
     "clsx": "^2.1.1",
     "next": "15.5.11",
     "next-themes": "^0.4.6",
